# PySDE

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yaml
applications/: example.ipynb  example_mpi.py  example_serial.ipynb  mpi.py
docs/: index.md
docs/api/: increments.md  integrator.md  runner.md  schemes.md  storages.md
docs/usage/: tutorial.md
example/: example.ipynb
examples/: builder.ipynb  example.ipynb  example_serial.ipynb  modular.ipynb  parallel.py  parallel_runner.py  serial.ipynb  serial_runner.ipynb
src/pysde/: __init__.py  increments.py  integrator.py  integrators.py  runner.py  schemes.py  stochastic_integrals.py  storages.py
src/sdeint/: sdeint.py
test/: test_integrators.py  test_schemes.py  test_stochastic_integrals.py  test_storages.py
tests/: test_integrators.py  test_schemes.py  test_stochastic_integrals.py  test_storages.py
