#===================================================================================================
#====================================== General Configuration ======================================
#===================================================================================================
[project]
name = "sdeint"
version = "0.1.0"
description = "Light-weight numerical integrator for stochastic differential equations"
readme = "README.md"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
]

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.2",
]

#---------------------------------------------------------------------------------------------------
[project.optional-dependencies]
style = [
    "ruff>=0.0.292",
    "black>=23.9.1",
    "mypy>=1.5.1",
]
test = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
]
vcs = [
    "pre-commit>=3.4.0",
]

#---------------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


#===================================================================================================
#=============================================== Ruff ==============================================
#===================================================================================================
[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "UP", "D",]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

#---------------------------------------------------------------------------------------------------
[tool.ruff.pydocstyle]
convention = "numpy"


#===================================================================================================
#=============================================== Black =============================================
#===================================================================================================
[tool.black]
line-length = 100
