#===================================================================================================
#====================================== General Configuration ======================================
#===================================================================================================
[project]
name = "pysde"
version = "0.1.0"
description = "Light-weight numerical integrator for stochastic differential equations"
readme = "README.md"
license = {text = "GNU GPLv3"}
authors = [
    {name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"},
]

requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25.2",
    "zarr>=2.16.1",
    "tqdm>=4.66.1",
]

#---------------------------------------------------------------------------------------------------
[project.optional-dependencies]
style = [
    "ruff>=0.0.292",
    "black>=23.9.1",
    "mypy>=1.6.0",
]
test = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
]
vcs = [
    "pre-commit>=3.4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "pandas>=2.1.0",
    "nbstripout>=0.6.1",
]
visualization = [
    "matplotlib>=3.8.0",
]
parallel = [
    "mpi4py>=3.1.5",
]

#---------------------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


#===================================================================================================
#=============================================== Ruff ==============================================
#===================================================================================================
[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "UP", "D",]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

#---------------------------------------------------------------------------------------------------
[tool.ruff.pydocstyle]
convention = "numpy"


#===================================================================================================
#=============================================== Black =============================================
#===================================================================================================
[tool.black]
line-length = 100
