[project]
authors = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
maintainers = [{ name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu" }]
name = "pysde"
description = "Light-weight numerical integrator for stochastic differential equations"
readme = "README.md"
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["stochastic differential equations", "numerical integration", "big data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]
urls = { repository = "https://github.com/UQatKIT/PySDE" }

# --------------------------------------------------------------------------------------------------
dependencies = [
    "beartype>=0.19.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
    "zarr>=3.0.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
    "seaborn>=0.13.2",
]
docs = [
    "git-cliff>=2.7.0",
    "mkdocs-autorefs>=1.3.0",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
]


# --------------------------------------------------------------------------------------------------
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
environments = ["sys_platform == 'linux'"]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]


# --------------------------------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
pydocstyle.convention = "google"


# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=eikonax",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "compile: requires compilation",
  "slow: tests with long runtime",
]
